--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.11.0",
@@ -132,7 +133,14 @@
     ],
     "plugins": [
       "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-proposal-export-default-from"
+      "@babel/plugin-proposal-export-default-from",
+      [
+        "extensible-destructuring",
+        {
+          "mode": "optout",
+          "impl": "immutable"
+        }
+      ]
     ]
   },
   "devDependencies": {
