--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
+    "react-currency-format": "^1.0.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-icon-base": "^2.1.2",
+    "react-input-range": "^1.3.0",
     "react-lazy-load-image-component": "^1.3.2",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
@@ -65,6 +67,7 @@
     "redux-debounced": "^0.5.0",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
