Order component - begin of implementation

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-responsive-carousel": "^3.1.46",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-compose-reducer": "^1.5.0",
     "redux-debounced": "^0.5.0",
