--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-icon-base": "^2.1.2",
+    "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-lazy-load-image-component": "^1.3.2",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
     "react-router-config": "^4.4.0-beta.6",
