--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "jsonp": "^0.2.1",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -59,6 +59,7 @@
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-lazy-load-image-component": "^1.3.2",
+    "react-medium-image-zoom": "^4.0.1",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
@@ -76,7 +77,7 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
