--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-lazy-load-image-component": "^1.3.2",
     "react-medium-image-zoom": "^4.0.1",
     "react-modal": "^3.8.1",
+    "react-paginate": "^6.3.2",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-config": "^4.4.0-beta.6",
