--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-extensible-destructuring": "^4.3.0"
+    "babel-plugin-extensible-destructuring": "^4.3.0",
+    "html-critical-webpack-plugin": "^2.1.0"
   }
 }
