--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-currency-format": "^1.0.0",
-    "react-dev-utils": "^7.0.1",
+    "react-dev-utils": ">=11.0.4",
     "react-dom": "^16.7.0",
     "react-icon-base": "^2.1.2",
     "react-input-mask": "^2.0.4",
